@@ -1,4 +1,5 @@
 0.03
+ - Add query for alias.
 
 0.02 2023-10-29T18:36:22+01:00
  - Add 'deprecated' parameter to handle deprecated values in query.
